fix(avatars): prevent flicker when loading avatars on settings pages
For accounts with an uploaded profile image, there's a brief flash of the
default profile image before the uploaded image is shown. This patch hides
the default image unless it's needed.

Fixes mozilla/fxa-content-server#2105.

--- a/packages/fxa-content-server/app/styles/_avatars.scss
+++ b/packages/fxa-content-server/app/styles/_avatars.scss
@@ -14,8 +14,6 @@
     width: 120px;
     display: block;
     margin: 0 auto;
-    background: image-url('default-profile.svg') center;
-    background-repeat: no-repeat;
     img, a.change-avatar {
       height: 120px;
       width: 120px;
@@ -25,10 +23,6 @@
       position: absolute;
       bottom: 0px;
     }
-  }
-
-  &.with-default {
-    background: image-url('default-profile.svg') center;
   }
 
   img {
@@ -51,6 +45,11 @@
     border-radius: 50%;
     position: relative;
   }
+}
+
+.with-default {
+  background: image-url('default-profile.svg') center;
+  background-repeat: no-repeat;
 }
 
 p.change-avatar-text {
